# FLIP

./: evaluation.py  main.ipynb  pyproject.toml  requirements.txt  run_experiment.py  run_repeated_experiment.py  sequential_execution.sh
experiment_summary_results/: cifar_r32p_1xs.csv  cifar_r32p_4xl.csv
experiments/attack_10_experts/: config.toml
experiments/attack_part/: config.toml
experiments/example_attack/: config.toml
experiments/example_downstream/: config.toml
experiments/generate_flips/: config.toml
experiments/generate_flips_0/: config.toml
experiments/generate_flips_1/: config.toml
experiments/generate_flips_2/: config.toml
experiments/generate_flips_3/: config.toml
experiments/generate_flips_4/: config.toml
experiments/resenet18_cifar100/: config.toml
experiments/student_models/: config.toml
experiments/train_experts/: config.toml
experiments/train_experts_r32_cifar_1xs_100/: config.toml
experiments/train_students/: config.toml
experiments/train_students_1/: config.toml
experiments/train_students_2/: config.toml
experiments/train_students_3/: config.toml
experiments/train_students_4/: config.toml
experiments/train_user/: config.toml
experiments/train_users/: config.toml
experiments/train_users_0/: config.toml
experiments/train_users_1/: config.toml
grids/: attack_grid.json  cifar_100_r32_1xs_grid.json  cifar_r32p_1xs_attack.json  cifar_r32p_4xl_attack.json  cifar_vgg_1xs_grid.json  simple_grid.json
scripts/: data_exploratpry.ipynb  metrics.ipynb  run_downstream_batch.py  run_full_pipeline.py
(+8 files in other folders)
