[project]
name = "flip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "toml>=0.10.2",
    "torch==2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
